--- a/package.json
+++ b/package.json
@@ -9,14 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "-": "^0.0.1",
+    "@reduxjs/toolkit": "^1.8.1",
+    "babel-plugin-styled-components": "^2.0.7",
+    "date-fns": "^2.28.0",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-loading-skeleton": "^3.1.0",
+    "react-redux": "^8.0.1",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
-    "@types/node": "17.0.31",
+    "@types/node": "^17.0.31",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.3",
+    "@types/styled-components": "^5.1.25",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6",
     "typescript": "4.6.4"
