--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-plugin-styled-components": "^2.0.7",
     "date-fns": "^2.28.0",
     "next": "12.1.6",
+    "next-pwa": "^5.5.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-loading-skeleton": "^3.1.0",
@@ -25,15 +26,11 @@
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.3",
     "@types/styled-components": "^5.1.25",
-<<<<<<< Updated upstream
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^8.15.0",
     "eslint-config-airbnb-base": "^15.0.0",
-=======
-    "eslint": "8.15.0",
->>>>>>> Stashed changes
     "eslint-config-next": "12.1.6",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^17.0.0",
